# GENARCH

./: .gitignore  ETHICS.md  LICENSE  METHODS.md  MODEL_CARD.md  PRD.md  README.md  VERIFICATION.md  data  docker-compose.yml  package-lock.json  package.json  pipeline  pyproject.toml  requirements.txt  site  vercel.json
genarch/pipeline/: README.md  graph.py  models.py  paths.py  pyproject.toml  report.py  update.py  utils.py  validate.py
genarch/pipeline/genarch_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
genarch/pipeline/sources/community/: loudoun-county-va.json
genarch/pipeline/sources/diseases/: alzheimers-disease.json  asthma.json  breast-cancer.json  colorectal-cancer.json  copd.json  coronary-artery-disease.json  covid-19-severity.json  cystic-fibrosis.json  huntington-disease.json  hypertension.json  lung-cancer.json  major-depressive-disorder.json  marfan-syndrome.json  multiple-sclerosis.json  obesity.json  pulmonary-fibrosis.json  rheumatoid-arthritis.json  schizophrenia.json  sickle-cell-disease.json  systemic-lupus-erythematosus.json  thalassemia.json  tuberculosis-susceptibility.json  type-2-diabetes.json
genarch/pipeline/sources/exposures/: air-pollution.json  alcohol.json  cannabis-use.json  crowding-housing.json  diet-quality.json  early-life-nutrition.json  endocrine-disruptors.json  endotoxin.json  heat-stress.json  high-sodium-intake.json  hormonal-exposures.json  infection-burden.json  ionizing-radiation.json  microbiome-alteration.json  occupational-dust.json  ozone.json  physical-inactivity.json  psychosocial-stress.json  sleep-disruption.json  smoking.json  (+3 more)
pipeline/: __init__.py  __main__.py  annotate.py  emit.py  graph_builder.py  ingest.py  models.py  normalize.py  paths.py  pyproject.toml  report.py  schemas.py  score.py  update.py  validate.py
pipeline/sources/: diseases.json  exposures.json  genes.json  pathways.json  seed.json
(+352 files in other folders)
