[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genarch-pipeline"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
]

[project.scripts]
genarch-validate = "pipeline.validate:validate"
genarch-update = "pipeline.update:run_update"
genarch-report = "pipeline.report:run_report"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]
