[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genarch-pipeline"
version = "1.0.0"
description = "GENARCH deterministic ETL and schema validation pipeline"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.11.0",
  "typing-extensions>=4.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["data/"]
