[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genarch-pipeline"
version = "0.1.0"
description = "GENARCH ETL + schema validation + report generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "rich>=13.7",
  "typer>=0.12",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["pipeline"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["pipeline"]
packages = ["pipeline"]
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true

